--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peluche Saint-Valentin</title>
+    <link rel="icon" href="Favicon.png" type="image/png">
     <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
-
+    <h1>HELLO WORLD</h1>
     <!-- Section 1 : Hero -->
     <section id="hero">
-        <p>HELLO WORD</p>
+        <p>HELLO WORLD</p>
     </section>
 
     <!-- Section 2 : Pourquoi -->
