--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Peluche Saint-Valentin</title>
-    <link rel="icon" href="Favicon.png" type="image/png">
+    <title>L'amour sans mot</title>
+    <link rel="icon" href="favicon.png" type="image/png">
     <link rel="stylesheet" href="styles/style.css" />
 </head>
 <body>
