--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
     <!-- SECTION 7: AVIS -->
     <section class="testimonials">
         <div class="container">
-            <h2 class="section-title" data-text="Ils ont fait sourire leurs proches">Ils ont fait sourire leurs proches</h2>
+            <h2 class="section-title" data-text="Ils ont fait sourire leurs proches">Ils ont fait sourire leurs partenaires</h2>
             
             <div class="testimonials-grid">
                 <div class="testimonial-card">
